--- a/configs/sovits_base_config.yaml
+++ b/configs/sovits_base_config.yaml
@@ -1,11 +1,11 @@
 train:
-  log_interval: 200
+  log_interval: 100
   seed: 1234
   per_step_epoch: 30000
   epochs: 100
   pin_memory: true
   num_workers: 5
-  prefetch: 40
+  prefetch: 5
   learning_rate: 0.0001
   betas: [0.8, 0.99]
   eps: 1.0e-9
@@ -24,6 +24,7 @@ train:
   all_in_mem: false
   vol_aug: true
   skip_optimizer: False
+  train_type: 'finetune'
   train_env: # 训练环境配置
     MASTER_ADDR: "localhost"
     MASTER_PORT: 10086
