--- a/configs/sunyanzi/diffusion.yaml
+++ b/configs/sunyanzi/diffusion.yaml
@@ -1,4 +1,4 @@
-data:
+data: !!python/object:utils.HParams
   block_size: 512
   cnhubertsoft_gate: 10
   duration: 1.5
@@ -9,17 +9,19 @@ data:
   extensions:
   - wav
   sampling_rate: 44100
-  training_files: filelists/train.txt
+  spk:
+    sunyanzi: 0
+  training_files: ckpts/sunyanzi/train.list
   unit_interpolate_mode: nearest
-  validation_files: filelists/val.txt
+  validation_files: ckpts/sunyanzi/val.list
 device: cuda
-env:
+env: !!python/object:utils.HParams
   expdir: logs/44k/diffusion
   gpu_id: 0
-infer:
+infer: !!python/object:utils.HParams
   method: dpm-solver++
   speedup: 10
-model:
+model: !!python/object:utils.HParams
   k_step_max: 0
   n_chans: 512
   n_hidden: 256
@@ -28,8 +30,7 @@ model:
   timesteps: 1000
   type: Diffusion
   use_pitch_aug: true
-
-train:
+train: !!python/object:utils.HParams
   amp_dtype: fp32
   batch_size: 48
   cache_all_data: true
@@ -45,6 +46,6 @@ train:
   num_workers: 4
   save_opt: false
   weight_decay: 0
-vocoder:
+vocoder: !!python/object:utils.HParams
   ckpt: pretrain/nsf_hifigan/model
   type: nsf-hifigan
