--- a/configs/diffusion_base_config.yaml
+++ b/configs/diffusion_base_config.yaml
@@ -9,13 +9,15 @@ data:
   extensions:
   - wav
   sampling_rate: 44100
+  shuffle_size: 100
+  sort_size: 50
+  hop_length: 512
+  max_frames_in_batch: 3000
+  batch_type: dynamic
   training_files: filelists/train.txt
   unit_interpolate_mode: nearest
   validation_files: filelists/val.txt
-device: cuda
-env:
-  expdir: logs/44k/diffusion
-  gpu_id: 0
+
 infer:
   method: dpm-solver++
   speedup: 10
@@ -30,21 +32,25 @@ model:
   use_pitch_aug: true
 
 train:
-  amp_dtype: fp32
+  fp16_run: false
+  log_interval: 10
   batch_size: 48
-  cache_all_data: true
-  cache_device: cpu
-  cache_fp16: true
-  decay_step: 100000
   epochs: 100000
-  gamma: 0.5
-  interval_force_save: 5000
-  interval_log: 10
-  interval_val: 2000
-  lr: 0.0001
   num_workers: 4
   save_opt: false
   weight_decay: 0
+  gamma: 0.9899
+  lr: 0.0001
+  skip_optimizer: false
+  train_type: finetune
+  per_step_epoch: 30000
+  train_env: # 训练环境配置
+    MASTER_ADDR: "localhost"
+    MASTER_PORT: 10086
+    WORLD_SIZE: 1
+    LOCAL_RANK: 0
+    RANK: 0
+    
 vocoder:
   ckpt: pretrain/nsf_hifigan/model
   type: nsf-hifigan
