--- a/configs/sunyanzi/diffusion.yaml
+++ b/configs/sunyanzi/diffusion.yaml
@@ -11,17 +11,19 @@ data: !!python/object:utils.HParams
   sampling_rate: 44100
   spk:
     sunyanzi: 0
+  shuffle_size: 100
+  sort_size: 50
+  hop_length: 512
+  max_frames_in_batch: 3000
+  batch_type: dynamic
   training_files: ckpts/sunyanzi/train.list
   unit_interpolate_mode: nearest
   validation_files: ckpts/sunyanzi/val.list
-device: cuda
-env: !!python/object:utils.HParams
-  expdir: logs/44k/diffusion
-  gpu_id: 0
-infer: !!python/object:utils.HParams
+infer:
   method: dpm-solver++
   speedup: 10
-model: !!python/object:utils.HParams
+
+model:
   k_step_max: 0
   n_chans: 512
   n_hidden: 256
@@ -30,22 +32,27 @@ model: !!python/object:utils.HParams
   timesteps: 1000
   type: Diffusion
   use_pitch_aug: true
-train: !!python/object:utils.HParams
-  amp_dtype: fp32
-  batch_size: 48
-  cache_all_data: true
-  cache_device: cpu
-  cache_fp16: true
-  decay_step: 100000
+
+train:
+  fp16_run: false
+  seed: 42
+  log_interval: 10
   epochs: 100000
-  gamma: 0.5
-  interval_force_save: 5000
-  interval_log: 10
-  interval_val: 2000
-  lr: 0.0001
   num_workers: 4
   save_opt: false
   weight_decay: 0
-vocoder: !!python/object:utils.HParams
+  gamma: 0.9899
+  lr: 0.0001
+  skip_optimizer: false
+  train_type: finetune
+  per_step_epoch: 30000
+  train_env: # 训练环境配置
+    MASTER_ADDR: "localhost"
+    MASTER_PORT: 10086
+    WORLD_SIZE: 1
+    LOCAL_RANK: 0
+    RANK: 0
+    
+vocoder:
   ckpt: pretrain/nsf_hifigan/model
   type: nsf-hifigan
