--- a/configs/sovits_base_config.yaml
+++ b/configs/sovits_base_config.yaml
@@ -1,12 +1,12 @@
 train:
-  log_interval: 100
+  log_interval: 50
   seed: 1234
   per_step_epoch: 30000
   epochs: 100
   pin_memory: true
   num_workers: 5
   prefetch: 5
-  learning_rate: 0.0001
+  learning_rate: 0.00005
   betas: [0.8, 0.99]
   eps: 1.0e-9
   fp16_run: false
@@ -23,8 +23,8 @@ train:
   keep_ckpts: 3
   all_in_mem: false
   vol_aug: true
-  skip_optimizer: False
-  train_type: 'finetune'
+  skip_optimizer: true
+  train_type: 'base'
   train_env: # 训练环境配置
     MASTER_ADDR: "localhost"
     MASTER_PORT: 10086
@@ -34,8 +34,8 @@ train:
 
 
 data:
-  training_files: filelists/train.txt
-  validation_files: filelists/val.txt
+  training_files: Data/sovits_svc/train.list
+  validation_files: Data/sovits_svc/dev.list
   max_wav_value: 32768.0
   sampling_rate: 44100
   filter_length: 2048
@@ -50,7 +50,7 @@ data:
   shuffle_size: 1000
   sort_size: 500
   batch_type: dynamic
-  max_frames_in_batch: 4200
+  max_frames_in_batch: 5000
 
 
 model:
