--- a/configs/sunyanzi/diffusion.yaml
+++ b/configs/sunyanzi/diffusion.yaml
@@ -1,7 +1,7 @@
 data: !!python/object:utils.HParams
   block_size: 512
   cnhubertsoft_gate: 10
-  duration: 1.5
+  duration: 2
   encoder: vec768l12
   encoder_hop_size: 320
   encoder_out_channels: 768
@@ -14,7 +14,7 @@ data: !!python/object:utils.HParams
   shuffle_size: 100
   sort_size: 50
   hop_length: 512
-  max_frames_in_batch: 3000
+  max_frames_in_batch: 10000
   batch_type: dynamic
   training_files: ckpts/sunyanzi/train.list
   unit_interpolate_mode: nearest
@@ -37,11 +37,15 @@ train:
   fp16_run: false
   seed: 42
   log_interval: 10
+  per_epoch_save: 5
   epochs: 100000
-  num_workers: 4
+  num_workers: 1
+  prefetch: 5
+  pin_memory: true
+  cache_fp16: true
   save_opt: false
   weight_decay: 0
-  gamma: 0.9899
+  gamma: 0.5
   lr: 0.0001
   skip_optimizer: false
   train_type: finetune
