--- a/configs/sunyanzi/diffusion.yaml
+++ b/configs/sunyanzi/diffusion.yaml
@@ -14,8 +14,9 @@ data: !!python/object:utils.HParams
   shuffle_size: 100
   sort_size: 50
   hop_length: 512
+  batch_size: 48
   max_frames_in_batch: 10000
-  batch_type: dynamic
+  batch_type: static  # static dynamic
   training_files: ckpts/sunyanzi/train.list
   unit_interpolate_mode: nearest
   validation_files: ckpts/sunyanzi/val.list
@@ -37,9 +38,9 @@ train:
   fp16_run: false
   seed: 42
   log_interval: 10
-  per_epoch_save: 5
+  per_epoch_save: 20
   epochs: 100000
-  num_workers: 1
+  num_workers: 5
   prefetch: 5
   pin_memory: true
   cache_fp16: true
